[tool.poetry]
name = "pygame-2k"
version = "0.1.0"
description = ""
authors = ["installer <installer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"
aiogram = "3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
